--- a/angular.json
+++ b/angular.json
@@ -23,11 +23,20 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              }
+                "input": "public",
+                "output": "/"
+              },
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/css/animate.css",
+              "src/assets/css/themify-icons.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/magnific-popup.css",
+              "src/assets/css/owl.carousel.min.css",
+              "src/assets/css/owl.theme.default.min.css",
+              "src/assets/css/style.css"
             ],
             "scripts": []
           },
@@ -81,11 +90,12 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              }
-            ],
+                "input": "public",
+                "output": "/"
+              },
+              "src/favicon.ico"
+                        ],
             "styles": [
-              "src/styles.css"
             ],
             "scripts": []
           }
